# todizzy

./: Cargo.toml  Info.plist  Makefile  README.md
.github/workflows/: release.yml
docs/: index.html
src/: main.rs
src/app/: mod.rs
src/editor/: buffer.rs  engine.rs  helix.rs  mod.rs  vim.rs
src/gestures/: mod.rs
src/settings/: mod.rs
src/storage/: mod.rs
